k8s/overlays/staging/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: eve-warehouse-app
spec:
  host: staging-eve-warehouse-app
  subsets:
    - name: v1
      labels:
        version: v1
