k8s/overlays/staging/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eve-warehouse-app
spec:
  hosts:
    - staging.evewarehouse.com
  gateways:
    - staging-eve-warehouse-gateway
  http:
    - route:
        - destination:
            host: staging-eve-warehouse-app
            subset: v1
